Implemented WebSocket support and pixel history tracking
- Added WebSocket endpoint to handle real-time pixel updates between frontend and backend.
- Created PixelHistory entity to store pixel color changes with user information and timestamps.
- Implemented PixelHistoryRepository for interacting with the database.
- Developed PixelHistoryService for retrieving pixel history and the next pixel updates by ID.
- Updated frontend to support real-time updates using WebSocket and display pixel change history.
- **Note**: WebSocket functionality is a temporary solution and needs thorough testing. Currently, it is a quick-and-dirty implementation  and should be improved.